update filter, search book

--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -2000,7 +2000,6 @@
  .why-text.full-width a{
      padding: 10px 20px;
      font-weight: 700;
-     color: #ffffff;
      border: none;
 }
  .list-view-box{
@@ -2575,6 +2574,48 @@
 	font-weight: 700;
 	padding: 12px 25px;
 	border: none;
+}
+
+/*
+	Modal load search
+*/
+
+.modal {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.4); /* Màu nền với độ trong suốt */
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+}
+
+.lds-dual-ring {
+  display: inline-block;
+  width: 80px;
+  height: 80px;
+}
+.lds-dual-ring:after {
+  content: " ";
+  display: block;
+  width: 64px;
+  height: 64px;
+  margin: 8px;
+  border-radius: 50%;
+  border: 6px solid #fff;
+  border-color: #fff transparent #fff transparent;
+  animation: lds-dual-ring 1.2s linear infinite;
+}
+@keyframes lds-dual-ring {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
 
 
