--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -163,7 +163,7 @@
 /*------------------------------------------------------------------ HEADER -------------------------------------------------------------------*/
  .main-top{
      background: #000000;
-     padding: 10px 0px;
+     padding: 16px 0px;
 }
  .custom-select-box{
      float: left;
@@ -268,10 +268,26 @@
 }
 .login-box{
     float: right;
-    width: 120px;
-    margin-left: 20px;
+    margin-right: 28px;
 }
 
+.login-box .my-account {
+	position: absolute;
+	background-color: #ffffff;
+	width: 30px;
+	height: 30px;
+	right: 40px;
+	border-radius: 50%;
+	z-index: 1000;
+	cursor: pointer;
+}
+
+.login-box .my-account i{
+    position: absolute;
+    top: 7px;
+    bottom: 0;
+    right: 8px;
+}
 .login-box .form-control{
      background: none;
      border: none;
@@ -311,6 +327,164 @@
 .bootstrap-select.btn-group .dropdown-menu a.dropdown-item span.dropdown-item-inner span.text{
 	font-size: 13px;
 }
+
+.login-box a {
+    color: #ffffff;
+    font-weight: 700;
+    text-transform: uppercase;
+    font-size: 14px;
+}
+/* 
+	Sign in, Sign up Section
+*/
+.button {
+  color: #fff;
+  padding: 6px 24px;
+  border: 2px solid #fff;
+  background: transparent;
+  border-radius: 6px;
+  cursor: pointer;
+}
+.button:active {
+  transform: scale(0.98);
+}
+
+/* Form */
+
+.modal {
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.4); /* Màu nền với độ trong suốt */
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+}
+
+.form_container {
+  position: fixed;
+  width: 450px;
+  min-height: 430px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(1.2);
+  z-index: 101;
+  background: #fff;
+  padding: 25px;
+  border-radius: 12px;
+  box-shadow: rgba(0, 0, 0, 0.1);
+  pointer-events: none;
+  transition: all 0.4s ease-out;
+  pointer-events: auto;
+  transform: translate(-50%, -50%) scale(1);
+}
+
+.signup_form {
+  display: none;
+}
+.form_container.active .signup_form {
+  display: block;
+}
+.form_container.active .login_form {
+  display: none;
+}
+.form_close {
+  position: absolute;
+  top: 10px;
+  right: 20px;
+  color: #0b0217;
+  font-size: 28px;
+  opacity: 0.7;
+  cursor: pointer;
+}
+.form_container h2 {
+  font-size: 28px;
+  color: #0b0217;
+  text-align: center;
+}
+.input_box {
+  position: relative;
+  margin-top: 30px;
+  width: 100%;
+  height: 40px;
+}
+.input_box input {
+  height: 100%;
+  width: 100%;
+  border: none;
+  outline: none;
+  padding: 0 30px;
+  color: #333;
+  transition: all 0.2s ease;
+  border-bottom: 1.5px solid #aaaaaa;
+}
+.input_box input:focus {
+  border-color: #7d2ae8;
+}
+.input_box i {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  font-size: 20px;
+  color: #707070;
+}
+
+.input_box i.fullname,
+.input_box i.email,
+.input_box i.password {
+  left: 0;
+}
+.input_box input:focus ~ i.email,
+.input_box input:focus ~ i.password {
+  color: #7d2ae8;
+}
+.input_box i.pw_hide {
+  right: 0;
+  font-size: 18px;
+  cursor: pointer;
+}
+.option_field {
+  margin-top: 14px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.form_container a {
+  color: #112647;
+  font-size: 18px;
+}
+.form_container a:hover {
+  text-decoration: underline;
+}
+.checkbox {
+  display: flex;
+  column-gap: 8px;
+  white-space: nowrap;
+}
+.checkbox input {
+  accent-color: #7d2ae8;
+}
+.checkbox label {
+  font-size: 18px;
+  cursor: pointer;
+  user-select: none;
+  color: #0b0217;
+  margin: 0;
+}
+.form_container .button {
+  background: #7d2ae8;
+  margin-top: 30px;
+  width: 100%;
+  padding: 10px 0;
+  border-radius: 0px;
+}
+.login_signup {
+  font-size: 12px;
+  text-align: center;
+  margin-top: 15px;
+}
+
  .search a{
      color: #b0b435;
 }
@@ -1997,10 +2171,12 @@
  .why-text.full-width p{
      padding-bottom: 20px;
 }
- .why-text.full-width a{
+
+ .why-text.full-width > a{
      padding: 10px 20px;
      font-weight: 700;
      border: none;
+     color: #fff;
 }
  .list-view-box{
      margin-bottom: 30px;
@@ -2580,19 +2756,6 @@
 	Modal load search
 */
 
-.modal {
-    display: none;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.4); /* Màu nền với độ trong suốt */
-    justify-content: center;
-    align-items: center;
-    z-index: 1000;
-}
-
 .lds-dual-ring {
   display: inline-block;
   width: 80px;
@@ -2616,6 +2779,18 @@
   100% {
     transform: rotate(360deg);
   }
+}
+
+/* 
+	No Result Search
+*/
+
+.no-result {
+	text-align: center;
+}
+
+.no-result i {
+	font-size: 120px;
 }
 
 
